versions/v2.13/modules/en/pages/installation-and-upgrade/rollbacks.adoc
= Rollbacks
ifeval::["{build-type}" != "srfa"]
:page-languages: [en, zh]
endif::[]
:revdate: 2026-07-15
:page-revdate: {revdate}
:page-community-path: getting-started/installation-and-upgrade/install-upgrade-on-a-kubernetes-cluster/rollbacks.adoc 
:page-product-path: installation-and-upgrade/rollbacks.adoc
:experimental:
ifeval::["{build-type}" != "community"]
:xref-migrate-cluster: xref:rancher-admin/back-up-restore-and-disaster-recovery/migrate-to-a-new-cluster.adoc
:xref-helm-charts-in-rancher: xref:cluster-admin/helm-charts-in-rancher/helm-charts-in-rancher.adoc
:xref-rancher-restore-config: xref:rancher-admin/back-up-restore-and-disaster-recovery/configuration/restore.adoc
:xref-back-restore-example-configs: xref:rancher-admin/back-up-restore-and-disaster-recovery/configuration/examples.adoc
:xref-rancher-restore: xref:rancher-admin/back-up-restore-and-disaster-recovery/restore.adoc
endif::[]
ifeval::["{build-type}" == "community"]
:xref-migrate-cluster: xref:how-to-guides/new-user-guides/backup-restore-and-disaster-recovery/migrate-rancher-to-new-cluster.adoc
:xref-helm-charts-in-rancher: xref:how-to-guides/new-user-guides/helm-charts-in-rancher/index.adoc
:xref-rancher-restore-config: xref:reference-guides/backup-restore-configuration/restore-configuration.adoc
:xref-back-restore-example-configs: xref:reference-guides/backup-restore-configuration/examples.adoc
:xref-rancher-restore: xref:how-to-guides/new-user-guides/backup-restore-and-disaster-recovery/restore-rancher.adoc
endif::[]

This page outlines how to roll back Rancher to a previous version after an upgrade.

include::shared:ROOT:partial$en/rollback-warning.adoc[]

Follow the instructions from this page when:

* The running Rancher instance has been upgraded to a newer version after the backup was made.
* The upstream (local) cluster is the same as where the backup was made.

[TIP]
====

* Follow these steps to {xref-migrate-cluster}[migrate Rancher].
* If you need to restore Rancher to its previous state at the same Rancher version, see the {xref-rancher-restore}[restore documentation].
====

To roll back Rancher to a lower/previous version, use the *Rancher Backups* application and restore Rancher from backup.

Rancher has to be started with the lower/previous version after a rollback.

A restore is performed by creating a Restore custom resource.

[IMPORTANT]
====

* Follow the instructions from this page for restoring Rancher on the same cluster where it was backed up from. In order to migrate Rancher to a new cluster, follow the steps to {xref-migrate-cluster}[migrate Rancher.]
* While restoring Rancher on the same setup, the Rancher deployment is manually scaled down before the restore starts, then the operator will scale it back up once the restore completes. As a result, Rancher and its UI will be unavailable until the restore is complete. While the UI is unavailable, use the original cluster kubeconfig with the restore YAML file: `kubectl create -f restore.yaml`.
====


== Step 1: Create the Restore Custom Resource

. Click *☰ > Cluster Management*.
. Go to the local cluster and click *Explore*.
. In the left navigation bar, click menu:Rancher Backups[Restore].

[NOTE]
====
If the Rancher Backups app is not visible, you will need to install it from the Charts page in *Apps*. Refer {xref-helm-charts-in-rancher}#_access_charts[here] for more information.
====


. Click *Create*.
. Create the Restore with the form or with YAML. For help creating the Restore resource using the online form, refer to the {xref-rancher-restore-config}[configuration reference] and to the {xref-back-restore-example-configs}[examples.]
. To use the YAML editor, you can click menu:Create[Create from YAML.] Enter the Restore YAML. The following is an example Restore custom resource:
+
[,yaml]
----
 apiVersion: resources.cattle.io/v1
 kind: Restore
 metadata:
   name: restore-migration
 spec:
   backupFilename: backup-b0450532-cee1-4aa1-a881-f5f48a007b1c-2020-09-15T07-27-09Z.tar.gz
   encryptionConfigSecretName: encryptionconfig
   storageLocation:
     s3:
       credentialSecretName: s3-creds
       credentialSecretNamespace: default
       bucketName: rancher-backups
       folder: rancher
       region: us-west-2
       endpoint: s3.us-west-2.amazonaws.com
----
+
For help configuring the Restore, refer to the {xref-rancher-restore-config}[configuration reference] and to the {xref-back-restore-example-configs}[examples.]

. Click *Create*.

*Result:* The backup file is created and updated to the target storage location. The resources are restored in this order:

. Custom Resource Definitions (CRDs)
. Cluster-scoped resources
. Namespaced resources

To check how the restore is progressing, you can check the logs of the operator. Follow these steps to get the logs:

[,yaml]
----
kubectl get pods -n cattle-resources-system
kubectl logs -n cattle-resources-system -f
----

== Step 2: Roll Back to a Previous Rancher Version

Rancher can be rolled back using the Helm CLI. To roll back to the previous version:

[,yaml]
----
helm rollback rancher -n cattle-system
----

If the previous revision is not the intended target, you can specify a revision to roll back to. To see the deployment history:

[,yaml]
----
helm history rancher -n cattle-system
----

When the target revision is determined, perform the rollback. This example will roll back to revision `3`:

[,yaml]
----
helm rollback rancher 3 -n cattle-system
----